--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./dist/js/home.js"></script>
+  <section id="container"></section>
 </body>
 </html>
